--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -1,11 +1,20 @@
 .list-item {
   color: #fff;
   width: 300px;
-  background-color: red;
+  background-color: rgb(115, 98, 192);
   margin: 20px auto;
   border-radius: 8px;
 }
 .list-item p {
   padding: 10px;
   font-size: 20px;
+  position: relative;
+}
+.list-item p span {
+  position: absolute;
+  right: 15px;
+  font-size: 22px;
+}
+.list-item p span:hover {
+  cursor: pointer;
 }
