--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,4 +6,28 @@
 body {
   background-color: #333;
   color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.box {
+  border: 3px solid black;
+  padding: 15px;
+  background-color: rgba(39, 196, 99, 0.9);
+  height: 600px;
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Montserrat", sans-serif;
+}
+.box input {
+  padding: 10px;
+}
+.box button {
+  display: inline-block;
+  font-family: "Ubuntu", sans-serif;
+  padding: 10px;
 }
