--- a/src/components/App.css
+++ b/src/components/App.css
@@ -25,12 +25,12 @@ body {
   margin-top: 20px;
   border-radius: 10%;
   border: 3px solid black;
-  padding: 15px;
-  background-color: rgba(39, 196, 99, 0.3);
-  min-height: 600px;
-  max-height: 600px;
+  padding: 25px;
+  background-color: rgba(63, 61, 184, 0.3);
+  min-height: 55vh;
+  max-height: 500px;
   overflow: hidden;
-  width: 350px;
+  min-width: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
