--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,6 +3,16 @@
   margin: 0;
   padding: 0;
 }
+@keyframes appear {
+  0% {
+    opacity: 0;
+    top: 10px;
+  }
+  100% {
+    opacity: 1;
+    top: 0;
+  }
+}
 body {
   background: rgb(34, 193, 195);
   background: linear-gradient(
@@ -24,11 +34,9 @@ body {
 .box {
   margin-top: 20px;
   border-radius: 10%;
-  border: 3px solid black;
   padding: 25px;
   background-color: rgba(63, 61, 184, 0.3);
   min-height: 55vh;
-  max-height: 500px;
   overflow: hidden;
   min-width: 350px;
   display: flex;
@@ -36,6 +44,7 @@ body {
   align-items: center;
   font-family: "Montserrat", sans-serif;
   overflow: hidden;
+  box-shadow: 10px 15px 18px -10px #888888;
 }
 .box h1 {
   padding: 15px;
